tests/vertical-slice/accept/http_client_response_resource_close.hew
import std::net::http::http_client;

fn close_response(value: http_client.Response) {
    value.close();
}

fn main() -> i64 {
    0
}
