tests/vertical-slice/reject/std_panic_wrapper_url_parse_invalid.hew
import std::net::url;

fn main() -> i64 {
    let parsed = url.parse("x");
    let host = parsed.host();
    parsed.close();
    host.len()
}
